first change in feature branch

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <body>
     <h1>What's up</h1>
     <p>this is a change</p>
+    <p>this is a change in feature branch</P>
     </body>
 </html>
